[package]
name = "local_stack_focus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bollard = "0.13.0"
tokio = { version = "1.19", features = ["macros"], default_features = false }
serde = { version = "1", features = ["derive"] }
toml = "0"
